minor clean up